Update entity IDs for phishing prefs.  b=417687 r=gavin
UltraBlame original commit: 1c1f27a84ecd2333a212abc5e2954ff75a9eefcf

--- a/browser/locales/en-US/chrome/browser/preferences/security.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/security.dtd
@@ -34,10 +34,10 @@ W
 LOCALIZATION
 NOTE
 (
-tellMaybeForgery
+blockWebForgeries
 .
 label
-tellMaybeAttackSite
+blockAttackSites
 .
 label
 )
@@ -108,7 +108,7 @@ known
 <
 !
 ENTITY
-tellMaybeAttackSite2
+blockAttackSites
 .
 label
 "
@@ -121,7 +121,7 @@ sites
 <
 !
 ENTITY
-tellMaybeAttackSite
+blockAttackSites
 .
 accesskey
 "
@@ -131,7 +131,7 @@ k
 <
 !
 ENTITY
-tellMaybeForgery2
+blockWebForgeries
 .
 label
 "
@@ -144,7 +144,7 @@ forgeries
 <
 !
 ENTITY
-tellMaybeForgery
+blockWebForgeries
 .
 accesskey
 "
