Bug 335266 - If update of Thunderbird was paused, incorrect message is shown; r=robert.bugzilla
UltraBlame original commit: f5593ad6dcc09e2e78a7be56122d67dc3ed8ccc0

--- a/toolkit/locales/en-US/chrome/mozapps/update/updates.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/update/updates.properties
@@ -228,7 +228,7 @@ resumePausedAfterCloseTitle
 =
 Software
 Update
-resumePausedAfterCloseMessage
+resumePausedAfterCloseMsg
 =
 You
 have
@@ -240,8 +240,6 @@ update
 Do
 you
 want
-%
-S
 to
 download
 the
@@ -253,7 +251,9 @@ while
 you
 continue
 to
-browse
+use
+%
+S
 ?
 updateReadyToInstallHeader
 =
