Bug 449522 - Context menu for HTML5 <video> elements. r=gavin, ui-r=boriss
UltraBlame original commit: 50053981fd5d06b655b1965bc2e50a5fa168cb71

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2584,6 +2584,50 @@ v
 <
 !
 ENTITY
+saveVideoCmd
+.
+label
+"
+Save
+Video
+As
+"
+>
+<
+!
+ENTITY
+saveVideoCmd
+.
+accesskey
+"
+v
+"
+>
+<
+!
+ENTITY
+saveAudioCmd
+.
+label
+"
+Save
+Audio
+As
+"
+>
+<
+!
+ENTITY
+saveAudioCmd
+.
+accesskey
+"
+v
+"
+>
+<
+!
+ENTITY
 sendImageCmd
 .
 label
@@ -2596,6 +2640,48 @@ Image
 !
 ENTITY
 sendImageCmd
+.
+accesskey
+"
+n
+"
+>
+<
+!
+ENTITY
+sendVideoCmd
+.
+label
+"
+Send
+Video
+"
+>
+<
+!
+ENTITY
+sendVideoCmd
+.
+accesskey
+"
+n
+"
+>
+<
+!
+ENTITY
+sendAudioCmd
+.
+label
+"
+Send
+Audio
+"
+>
+<
+!
+ENTITY
+sendAudioCmd
 .
 accesskey
 "
@@ -2692,6 +2778,50 @@ y
 <
 !
 ENTITY
+copyVideoURLCmd
+.
+label
+"
+Copy
+Video
+Location
+"
+>
+<
+!
+ENTITY
+copyVideoURLCmd
+.
+accesskey
+"
+o
+"
+>
+<
+!
+ENTITY
+copyAudioURLCmd
+.
+label
+"
+Copy
+Audio
+Location
+"
+>
+<
+!
+ENTITY
+copyAudioURLCmd
+.
+accesskey
+"
+o
+"
+>
+<
+!
+ENTITY
 blockImageCmd
 .
 accesskey
@@ -2760,6 +2890,142 @@ thisFrameMenu
 accesskey
 "
 h
+"
+>
+<
+!
+-
+-
+Media
+(
+video
+/
+audio
+)
+controls
+-
+-
+>
+<
+!
+ENTITY
+mediaPlay
+.
+label
+"
+Play
+"
+>
+<
+!
+ENTITY
+mediaPlay
+.
+accesskey
+"
+P
+"
+>
+<
+!
+ENTITY
+mediaPause
+.
+label
+"
+Pause
+"
+>
+<
+!
+ENTITY
+mediaPause
+.
+accesskey
+"
+P
+"
+>
+<
+!
+ENTITY
+mediaMute
+.
+label
+"
+Mute
+"
+>
+<
+!
+ENTITY
+mediaMute
+.
+accesskey
+"
+M
+"
+>
+<
+!
+ENTITY
+mediaUnmute
+.
+label
+"
+Unmute
+"
+>
+<
+!
+ENTITY
+mediaUnmute
+.
+accesskey
+"
+m
+"
+>
+<
+!
+ENTITY
+mediaShowControls
+.
+label
+"
+Show
+Controls
+"
+>
+<
+!
+ENTITY
+mediaShowControls
+.
+accesskey
+"
+C
+"
+>
+<
+!
+ENTITY
+mediaHideControls
+.
+label
+"
+Hide
+Controls
+"
+>
+<
+!
+ENTITY
+mediaHideControls
+.
+accesskey
+"
+C
 "
 >
 <
