Bug 460668 - Remove useless search-sidebar-closebutton from help.xul (also add emptytext attribute and remove some obsolete css). NPODB. r=Neil.
UltraBlame original commit: 531db9fe7e20c11a72d929450bba9ef7aaefeea1

--- a/toolkit/locales/en-US/chrome/mozapps/help/help.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/help/help.dtd
@@ -225,9 +225,9 @@ W
 <
 !
 ENTITY
-searchtab
+search
 .
-label
+emptytext
 "
 Search
 "
@@ -235,22 +235,11 @@ Search
 <
 !
 ENTITY
-searchtab
+searchHeader
 .
-accesskey
+label
 "
-S
-"
->
-<
-!
-ENTITY
-searchClose
-.
-tooltip
-"
-Close
-search
+Search
 results
 "
 >
