Bug 439133 - "Show Image" is poorly labeled, can be confused with "View Image". ui-r=faaborg, r=mano
UltraBlame original commit: 1a9b8db616f3ac8d4aa8d71f57b20721f1c299fd

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2247,22 +2247,22 @@ I
 <
 !
 ENTITY
-showImageCmd
+reloadImageCmd
 .
 label
 "
-Show
+Reload
 Image
 "
 >
 <
 !
 ENTITY
-showImageCmd
+reloadImageCmd
 .
 accesskey
 "
-S
+R
 "
 >
 <
