Rephrase Clear Private Data's "Authenticated Sessions."  b=460338 r=mconnor ui-r=faaborg
UltraBlame original commit: 98a09198ccc834fa990e1a1bf4adda30ac3a4172

--- a/browser/locales/en-US/chrome/browser/sanitize.dtd
+++ b/browser/locales/en-US/chrome/browser/sanitize.dtd
@@ -222,22 +222,22 @@ D
 <
 !
 ENTITY
-itemSessions
+itemActiveLogins
 .
 label
 "
-Authenticated
-Sessions
+Active
+Logins
 "
 >
 <
 !
 ENTITY
-itemSessions
+itemActiveLogins
 .
 accesskey
 "
-S
+L
 "
 >
 <
