Bug 459950 - Polish about:sessionrestore; r=l10n, ui-r=faaborg
UltraBlame original commit: 0e702acc89d97b11a3d7a7f199f7aa77515cc2f6

--- a/browser/locales/en-US/chrome/browser/aboutSessionRestore.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutSessionRestore.dtd
@@ -3,10 +3,9 @@
 ENTITY
 restorepage
 .
-title
+tabtitle
 "
 Restore
-Previous
 Session
 "
 >
@@ -15,25 +14,79 @@ Session
 ENTITY
 restorepage
 .
-titletext
+pagetitle
+"
+Would
+You
+Like
+to
+Restore
+Your
+Session
+?
+"
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+:
+If
+"
+closed
+unexpectedly
+"
+sounds
+too
+awkward
+in
+the
+translation
+you
+may
+translate
+"
+crash
+"
+instead
+(
+even
+though
+it
+'
+s
+IT
+-
+speak
+)
+-
+-
+>
+<
+!
+ENTITY
+restorepage
+.
+issueDesc
 "
 Your
-Last
+previous
 &
 brandShortName
 ;
-Session
-Closed
-Unexpectedly
-"
->
-<
-!
-ENTITY
-restorepage
+session
+closed
+unexpectedly
 .
-shortDesc
-"
+We
+sincerely
+apologize
+for
+the
+inconvenience
+.
 You
 can
 restore
@@ -56,12 +109,6 @@ are
 no
 longer
 needed
-.
-Our
-apologies
-for
-the
-inconvenience
 .
 "
 >
@@ -124,7 +171,7 @@ might
 be
 causing
 the
-crash
+problem
 :
 "
 >
@@ -205,7 +252,10 @@ Tabs
 LOCALIZATION
 NOTE
 :
-%
+&
+#
+37
+;
 S
 will
 be
@@ -225,7 +275,6 @@ restorepage
 windowLabel
 "
 Window
-#
 &
 #
 37
