Bug 411261 - Bookmark properties dialog needs tagging UI, r=dietrich, ui-r:changes required by Faaborg in bug 459958
UltraBlame original commit: 6fd85628b1dc1f1c4a7c95fc522d21f90861a426

--- a/browser/locales/en-US/chrome/browser/places/bookmarkProperties.properties
+++ b/browser/locales/en-US/chrome/browser/places/bookmarkProperties.properties
@@ -1,6 +1,12 @@
 dialogAcceptLabelAddItem
 =
 Add
+dialogAcceptLabelSaveItem
+=
+Save
+dialogAcceptLabelAddLivemark
+=
+Subscribe
 dialogAcceptLabelAddMulti
 =
 Add
@@ -8,25 +14,24 @@ Bookmarks
 dialogAcceptLabelEdit
 =
 Save
-Changes
 dialogTitleAddBookmark
 =
-Add
+New
 Bookmark
 dialogTitleAddLivemark
 =
-Add
+Subscribe
+to
 Live
 Bookmark
 dialogTitleAddFolder
 =
-Add
+New
 Folder
 dialogTitleAddMulti
 =
-Bookmark
-All
-Tabs
+New
+Bookmarks
 dialogTitleEdit
 =
 Properties
