--- a/browser/locales/en-US/chrome/browser/places/editBookmarkOverlay.dtd
+++ b/browser/locales/en-US/chrome/browser/places/editBookmarkOverlay.dtd
@@ -299,3 +299,28 @@ label
 Choose
 "
 >
+<
+!
+ENTITY
+editBookmarkOverlay
+.
+newFolderButton
+.
+label
+"
+New
+Folder
+"
+>
+<
+!
+ENTITY
+editBookmarkOverlay
+.
+newFolderButton
+.
+accesskey
+"
+N
+"
+>
