Bug 462294 -  Add "View Video" to context menu for <video> elements. r=gavin, ui-r=boriss
UltraBlame original commit: bf8ec3b200b9402d59a84e078ff7663184cca69d

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2289,6 +2289,27 @@ I
 <
 !
 ENTITY
+viewVideoCmd
+.
+label
+"
+View
+Video
+"
+>
+<
+!
+ENTITY
+viewVideoCmd
+.
+accesskey
+"
+I
+"
+>
+<
+!
+ENTITY
 viewBGImageCmd
 .
 label
