--- a/toolkit/locales/en-US/chrome/passwordmgr/passwordmgr.properties
+++ b/toolkit/locales/en-US/chrome/passwordmgr/passwordmgr.properties
@@ -422,17 +422,88 @@ password
 savePasswordTitle
 =
 Confirm
-savePasswordText
+#
+1st
+string
+is
+product
+name
+2nd
+is
+the
+username
+for
+the
+login
+3rd
+is
+the
+#
+login
+'
+s
+hostname
+.
+Note
+that
+long
+usernames
+may
+be
+truncated
+.
+saveLoginText
 =
 Do
 you
 want
 %
+1
+S
+to
+remember
+the
+password
+for
+"
+%
+2
+S
+"
+on
+%
+3
+S
+?
+#
+1st
+string
+is
+product
+name
+2nd
+is
+the
+login
+'
+s
+hostname
+saveLoginTextNoUsername
+=
+Do
+you
+want
+%
+1
 S
 to
 remember
 this
 password
+on
+%
+2
+S
 ?
 notNowButtonText
 =
