Bug 455906: Support severities for blocklist entries. r=robstrong, r=jst
UltraBlame original commit: bbccbf2c74562ce6307792746d4126a9b1facb76

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -1416,6 +1416,23 @@ protection
 <
 !
 ENTITY
+softBlocklisted
+.
+label
+"
+Known
+to
+cause
+security
+or
+stability
+issues
+.
+"
+>
+<
+!
+ENTITY
 toBeDisabled
 .
 label
@@ -2090,5 +2107,29 @@ accept
 Accept
 and
 Install
+"
+>
+<
+!
+ENTITY
+blocklist
+.
+blocked
+.
+label
+"
+Blocked
+"
+>
+<
+!
+ENTITY
+blocklist
+.
+checkbox
+.
+label
+"
+Disable
 "
 >
