--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -550,24 +550,34 @@ about
 the
 problem
 .
-blocklistedInstallTitle
+blocklistedInstallTitle2
 =
 This
-extension
+add
+-
+on
 is
-not
-secure
-blocklistedInstallMsg
+dangerous
+to
+use
+blocklistedInstallMsg2
 =
 The
-extension
+add
+-
+on
 %
 S
-is
-known
-to
-be
-dangerous
+has
+a
+high
+risk
+of
+causing
+stability
+or
+security
+problems
 and
 can
 '
@@ -575,50 +585,50 @@ t
 be
 installed
 .
-blocklistNotifyTitle2
+softBlockedInstallTitle
 =
-Add
--
-ons
-may
-be
-causing
-problems
-blocklistNotifyMsg2
-=
-%
-S
-has
-determined
-that
-the
-following
+This
 add
 -
-ons
+on
 may
 be
-unstable
+dangerous
+to
+use
+softBlockedInstallMsg
+=
+The
+add
+-
+on
+%
+S
+may
+cause
+stability
 or
-insecure
+security
+problems
 .
-blocklistRestartMsg2
-=
-You
-should
-restart
-%
-S
-so
+It
+is
+highly
+recommended
 that
-these
-add
--
-ons
-can
-be
-disabled
+you
+do
+not
+install
+it
 .
+softBlockedInstallAcceptLabel
+=
+Install
+Anyway
+softBlockedInstallAcceptKey
+=
+I
 missingFileTitle
 =
 Missing
