Backed out changeset bbccbf2c7456
UltraBlame original commit: ce4ae8f2aed31141d5e1cb674c9bd8ecc42d6dc7

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -550,34 +550,24 @@ about
 the
 problem
 .
-blocklistedInstallTitle2
+blocklistedInstallTitle
 =
 This
-add
--
-on
+extension
 is
-dangerous
-to
-use
-blocklistedInstallMsg2
+not
+secure
+blocklistedInstallMsg
 =
 The
-add
--
-on
+extension
 %
 S
-has
-a
-high
-risk
-of
-causing
-stability
-or
-security
-problems
+is
+known
+to
+be
+dangerous
 and
 can
 '
@@ -585,50 +575,50 @@ t
 be
 installed
 .
-softBlockedInstallTitle
+blocklistNotifyTitle2
 =
-This
-add
+Add
 -
-on
+ons
 may
 be
-dangerous
-to
-use
-softBlockedInstallMsg
+causing
+problems
+blocklistNotifyMsg2
 =
-The
-add
--
-on
 %
 S
-may
-cause
-stability
-or
-security
-problems
-.
-It
-is
-highly
-recommended
+has
+determined
 that
-you
-do
-not
-install
-it
+the
+following
+add
+-
+ons
+may
+be
+unstable
+or
+insecure
 .
-softBlockedInstallAcceptLabel
+blocklistRestartMsg2
 =
-Install
-Anyway
-softBlockedInstallAcceptKey
-=
-I
+You
+should
+restart
+%
+S
+so
+that
+these
+add
+-
+ons
+can
+be
+disabled
+.
 missingFileTitle
 =
 Missing
