--- a/toolkit/locales/en-US/chrome/mozapps/downloads/downloads.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/downloads/downloads.properties
@@ -262,6 +262,132 @@ to
 go
 offline
 ?
+enterPrivateBrowsingCancelDownloadsAlertTitle
+=
+Cancel
+All
+Downloads
+?
+enterPrivateBrowsingCancelDownloadsAlertMsg
+=
+If
+you
+enter
+the
+Private
+Browsing
+mode
+now
+1
+download
+will
+be
+canceled
+.
+Are
+you
+sure
+you
+want
+to
+enter
+the
+Private
+Browsing
+mode
+?
+enterPrivateBrowsingCancelDownloadsAlertMsgMultiple
+=
+If
+you
+enter
+the
+Private
+Browsing
+mode
+now
+%
+S
+downloads
+will
+be
+canceled
+.
+Are
+you
+sure
+you
+want
+to
+enter
+the
+Private
+Browsing
+mode
+?
+leavePrivateBrowsingCancelDownloadsAlertTitle
+=
+Cancel
+All
+Downloads
+?
+leavePrivateBrowsingCancelDownloadsAlertMsg
+=
+If
+you
+leave
+the
+Private
+Browsing
+mode
+now
+1
+download
+will
+be
+canceled
+.
+Are
+you
+sure
+you
+want
+to
+leave
+the
+Private
+Browsing
+mode
+?
+leavePrivateBrowsingCancelDownloadsAlertMsgMultiple
+=
+If
+you
+leave
+the
+Private
+Browsing
+mode
+now
+%
+S
+downloads
+will
+be
+canceled
+.
+Are
+you
+sure
+you
+want
+to
+leave
+the
+Private
+Browsing
+mode
+?
 cancelDownloadsOKText
 =
 Cancel
@@ -289,6 +415,23 @@ dontGoOfflineButton
 =
 Stay
 Online
+dontEnterPrivateBrowsingButton
+=
+Don
+'
+t
+Enter
+the
+Private
+Browsing
+Mode
+dontLeavePrivateBrowsingButton
+=
+Stay
+in
+Private
+Browsing
+Mode
 downloadsCompleteTitle
 =
 Downloads
