Bug 411929 - Private Browsing UI; r=mconnor,bzbarsky sr=bzbarsky
UltraBlame original commit: b2b3816d152fec078cc93a0e4ae73d8df5600b99

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -116,6 +116,54 @@ titlemodifiermenuseparator
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+mainWindowPrivateBrowsing
+.
+titlemodifier
+)
+:
+This
+will
+be
+appended
+to
+the
+window
+'
+s
+title
+inside
+the
+private
+browsing
+mode
+-
+-
+>
+<
+!
+ENTITY
+mainWindowPrivateBrowsing
+.
+titlemodifier
+"
+&
+mainWindow
+.
+titlemodifier
+;
+(
+Private
+Browsing
+)
+"
+>
+<
+!
 ENTITY
 tabCmd
 .
@@ -1547,6 +1595,27 @@ clearPrivateDataCmd
 accesskey
 "
 P
+"
+>
+<
+!
+ENTITY
+privateBrowsingCmd
+.
+label
+"
+Private
+Browsing
+"
+>
+<
+!
+ENTITY
+privateBrowsingCmd
+.
+accesskey
+"
+B
 "
 >
 <
