Bug 462911 - support NS_PRINTING in gfx / cairo.  r=vlad
UltraBlame original commit: efb33730c654b6451c48bd679afd624d39495abe

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -242,3 +242,29 @@ h
 for
 endian
 macros
+=
+=
+=
+=
+disable
+printing
+patch
+=
+=
+=
+=
+disable
+-
+printing
+.
+patch
+:
+allows
+us
+to
+use
+NS_PRINTING
+to
+disable
+printing
+.
