Bug 17612: front end patch to enable view-source link browsing, r=gavin
UltraBlame original commit: f3e79a7ed0e70de20778ec024c250db0431f6dfe

--- a/toolkit/locales/en-US/chrome/global/viewSource.dtd
+++ b/toolkit/locales/en-US/chrome/global/viewSource.dtd
@@ -660,3 +660,63 @@ commandkey2
 VK_F3
 "
 >
+<
+!
+ENTITY
+backCmd
+.
+label
+"
+Back
+"
+>
+<
+!
+ENTITY
+backCmd
+.
+accesskey
+"
+B
+"
+>
+<
+!
+ENTITY
+forwardCmd
+.
+label
+"
+Forward
+"
+>
+<
+!
+ENTITY
+forwardCmd
+.
+accesskey
+"
+F
+"
+>
+<
+!
+ENTITY
+goBackCmd
+.
+commandKey
+"
+[
+"
+>
+<
+!
+ENTITY
+goForwardCmd
+.
+commandKey
+"
+]
+"
+>
