Bug 324121 - Extensions with available updates for the next version of the app should not be listed in app update extension will be disabled warning (AUS patch). r=dtownsend ui-r=beltzner
UltraBlame original commit: a6e0b26a65e89e43dfbe844d34b7bbef387ded71

--- a/toolkit/locales/en-US/chrome/mozapps/update/updates.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/update/updates.dtd
@@ -44,38 +44,18 @@ Updates
 <
 !
 ENTITY
-checking
+updateCheck
 .
 label
 "
+Looking
+for
+newer
+versions
+of
 &
 brandShortName
 ;
-is
-now
-checking
-for
-updates
-"
->
-<
-!
-ENTITY
-cancel
-.
-label
-"
-Cancel
-"
->
-<
-!
-ENTITY
-cancel
-.
-accesskey
-"
-C
 "
 >
 <
@@ -147,24 +127,33 @@ checking
 <
 !
 ENTITY
-incompatibleChecking
+incompatibleCheck
+.
+title
+"
+Checking
+Add
+-
+on
+Compatibility
+"
+>
+<
+!
+ENTITY
+incompatibleCheck
 .
 label
 "
-Checking
-if
-this
-update
-will
-cause
-problems
-with
+Looking
+for
+newer
+versions
+of
 your
-extensions
-and
-/
-or
-themes
+add
+-
+ons
 "
 >
 <
@@ -185,59 +174,9 @@ update
 <
 !
 ENTITY
-incompatible
-.
-warning
-"
-This
-update
-will
-cause
-some
-of
-your
-extensions
-and
-/
-or
-themes
-to
-stop
-working
-until
-they
-are
-updated
-.
-"
->
-<
-!
-ENTITY
-listIncompatible
-.
-label
-"
-Show
-List
-"
->
-<
-!
-ENTITY
-listIncompatible
-.
-accesskey
-"
-L
-"
->
-<
-!
-ENTITY
-upgrade
-.
 evangelism
+.
+desc
 "
 It
 is
@@ -245,7 +184,10 @@ strongly
 recommended
 that
 you
-upgrade
+apply
+this
+update
+for
 &
 brandShortName
 ;
@@ -404,6 +346,20 @@ T
 <
 !
 ENTITY
+incompatibleList
+.
+title
+"
+Incompatible
+Add
+-
+ons
+Found
+"
+>
+<
+!
+ENTITY
 downloading
 .
 title
@@ -475,51 +431,25 @@ package
 <
 !
 ENTITY
+viewDetails
+.
+tooltip
+"
+View
+details
+for
+this
+update
+"
+>
+<
+!
+ENTITY
 details
 .
 link
 "
 Details
-"
->
-<
-!
-ENTITY
-pause
-.
-label
-"
-Pause
-"
->
-<
-!
-ENTITY
-pause
-.
-accesskey
-"
-e
-"
->
-<
-!
-ENTITY
-close
-.
-label
-"
-Close
-"
->
-<
-!
-ENTITY
-close
-.
-accesskey
-"
-C
 "
 >
 <
@@ -620,47 +550,7 @@ Update
 <
 !
 ENTITY
-finished
-.
-title
-"
-Update
-Downloaded
-"
->
-<
-!
-ENTITY
-finished
-.
-text
-"
-The
-update
-was
-successfully
-downloaded
-and
-verified
-and
-it
-will
-be
-installed
-the
-next
-time
-&
-brandShortName
-;
-starts
-.
-"
->
-<
-!
-ENTITY
-finishedBackground
+finishedPage
 .
 title
 "
@@ -673,28 +563,64 @@ Install
 <
 !
 ENTITY
-finishedBackground
+finishedPage
 .
 text
 "
+The
+update
+will
+be
+installed
+the
+next
+time
+&
+brandShortName
+;
+starts
+.
+You
+can
+restart
+&
+brandShortName
+;
+now
+or
+continue
+working
+and
+restart
+later
+.
+"
+>
+<
+!
+ENTITY
+finishedBackgroundPage
+.
+text
+"
+A
+security
+and
+stability
+update
+for
 &
 brandShortName
 ;
 has
+been
 downloaded
 and
-verified
-an
-important
-update
-.
-Click
-the
-link
-below
-for
-more
-details
+is
+ready
+to
+be
+installed
 .
 "
 >
@@ -718,7 +644,7 @@ NOTE
 (
 finishedBackground
 .
-more1
+more
 )
 :
 This
@@ -726,98 +652,53 @@ string
 describes
 the
 button
-label
+labels
 defined
 by
-restartButton
-in
-updates
-.
-properties
-.
--
--
->
-<
-!
-ENTITY
-finishedBackground
-.
-more1
-"
-Click
-Restart
-&
-brandShortName
-;
-Now
-to
-install
-the
-update
-now
-.
-"
->
-<
-!
--
--
-LOCALIZATION
-NOTE
-(
-finishedBackground
-.
-textNotNow
-)
-:
-This
-string
-describes
-the
-button
-label
-defined
-by
-notNowButton
-in
-updates
-.
-properties
-.
--
--
->
-<
-!
-ENTITY
-finishedBackground
-.
-textNotNow
-"
-Click
-Not
-Now
-to
-close
-this
-dialog
+restartNowButton
 and
-continue
-working
+restartLaterButton
+in
+updates
 .
-&
-brandShortName
-;
-will
-install
-the
+properties
+.
+-
+-
+>
+<
+!
+ENTITY
+finishedBackground
+.
+more
+"
+The
 update
+will
+be
+installed
 the
 next
 time
-it
+&
+brandShortName
+;
 starts
+.
+You
+can
+restart
+&
+brandShortName
+;
+now
+or
+continue
+working
+and
+restart
+later
 .
 "
 >
