--- a/browser/locales/en-US/chrome/browser/places/places.dtd
+++ b/browser/locales/en-US/chrome/browser/places/places.dtd
@@ -822,6 +822,59 @@ y
 ENTITY
 cmd
 .
+delete
+.
+label
+"
+Delete
+This
+Page
+"
+>
+<
+!
+ENTITY
+cmd
+.
+delete
+.
+accesskey
+"
+D
+"
+>
+<
+!
+ENTITY
+cmd
+.
+deleteDomainData
+.
+label
+"
+Forget
+About
+This
+Site
+"
+>
+<
+!
+ENTITY
+cmd
+.
+deleteDomainData
+.
+accesskey
+"
+F
+"
+>
+<
+!
+ENTITY
+cmd
+.
 open
 .
 label
