Extend "Clear Private Data" with time period option.  b=453440, r=mconnor ui-r=beltzner a=blocking-firefox3.1
UltraBlame original commit: 7fc3096ef585821f0453febb4073f79bb56e498d

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1578,23 +1578,23 @@ n
 <
 !
 ENTITY
-clearPrivateDataCmd
+clearRecentHistoryCmd
 .
 label
 "
 Clear
-Private
-Data
+Recent
+History
 "
 >
 <
 !
 ENTITY
-clearPrivateDataCmd
+clearRecentHistoryCmd
 .
 accesskey
 "
-P
+H
 "
 >
 <
