--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -448,17 +448,16 @@ accesskey
 U
 #
 Sanitize
-sanitizeWithPromptLabel
+sanitizeWithPromptLabel2
+=
+Clear
+Recent
+History
+sanitizeButton2
 =
 Clear
 Private
 Data
-sanitizeButton
-=
-Clear
-Private
-Data
-Now
 #
 Check
 for
