--- a/browser/locales/en-US/chrome/browser/sanitize.dtd
+++ b/browser/locales/en-US/chrome/browser/sanitize.dtd
@@ -1,13 +1,25 @@
 <
 !
 ENTITY
-sanitizeDialog
+sanitizePrefs
 .
 title
 "
 Clear
 Private
 Data
+"
+>
+<
+!
+ENTITY
+sanitizeDialog2
+.
+title
+"
+Clear
+Recent
+History
 "
 >
 <
@@ -28,24 +40,21 @@ now
 <
 !
 ENTITY
-clearDataSettings
+clearDataSettings2
 .
 label
 "
 When
 I
-ask
+quit
 &
 brandShortName
 ;
-to
-clear
-my
-private
-data
 it
 should
-erase
+automatically
+clear
+all
 :
 "
 >
@@ -73,42 +82,168 @@ issue
 <
 !
 ENTITY
-itemHistory
+clearDuration
 .
 label
 "
-Browsing
+Remove
+"
+>
+<
+!
+ENTITY
+clearDuration
+.
+lastHour
+"
+the
+last
+hour
+"
+>
+<
+!
+ENTITY
+clearDuration
+.
+last2Hours
+"
+the
+last
+2
+hours
+"
+>
+<
+!
+ENTITY
+clearDuration
+.
+last4Hours
+"
+the
+last
+4
+hours
+"
+>
+<
+!
+ENTITY
+clearDuration
+.
+today
+"
+my
+history
+for
+today
+"
+>
+<
+!
+ENTITY
+clearDuration
+.
+everything
+"
+my
+entire
+history
+"
+>
+<
+!
+-
+-
+Localization
+note
+(
+clearDuration
+.
+suffix
+)
+-
+trailing
+entity
+for
+languages
+that
+require
+it
+.
+-
+-
+>
+<
+!
+ENTITY
+clearDuration
+.
+suffix
+"
+"
+>
+<
+!
+ENTITY
+historySection
+.
+label
+"
 History
 "
 >
 <
 !
 ENTITY
-itemHistory
+dataSection
+.
+label
+"
+Data
+"
+>
+<
+!
+ENTITY
+itemVisitedPages
+.
+label
+"
+Visited
+Pages
+"
+>
+<
+!
+ENTITY
+itemVisitedPages
 .
 accesskey
 "
-B
+V
 "
 >
 <
 !
 ENTITY
-itemFormSearchHistory
+itemFormSearchEntries
 .
 label
 "
-Saved
 Form
-and
+&
+amp
+;
 Search
-History
+Entries
 "
 >
 <
 !
 ENTITY
-itemFormSearchHistory
+itemFormSearchEntries
 .
 accesskey
 "
@@ -159,21 +294,22 @@ C
 <
 !
 ENTITY
-itemCache
+itemWebCache
 .
 label
 "
+Web
 Cache
 "
 >
 <
 !
 ENTITY
-itemCache
+itemWebCache
 .
 accesskey
 "
-a
+W
 "
 >
 <
@@ -201,18 +337,18 @@ O
 <
 !
 ENTITY
-itemDownloads
+itemDownloadList
 .
 label
 "
 Download
-History
+List
 "
 >
 <
 !
 ENTITY
-itemDownloads
+itemDownloadList
 .
 accesskey
 "
@@ -248,5 +384,15 @@ window
 width
 "
 30em
+"
+>
+<
+!
+ENTITY
+column
+.
+width
+"
+14em
 "
 >
