b=462938, Upgrade cairo to 1.8.2 and pixman to 0.12.0 [cairo piece]
UltraBlame original commit: ce976e0708ab4a7fc43cf78fcad0c6b21c8a06ff

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -69,13 +69,9 @@ cairo
 (
 1
 .
-7
+8
 .
-4
--
-136
--
-g5ea2555
+2
 )
 pixman
 (
@@ -83,13 +79,13 @@ pixman
 -
 0
 .
-11
+12
 .
-10
+0
 -
-8
+19
 -
-g7180230
+g95f2af9
 )
 *
 *
@@ -219,6 +215,32 @@ no
 fs
 permissions
 .
+cairo
+-
+version
+-
+fixes
+.
+patch
+:
+fix
+up
+cairo
+-
+version
+.
+c
+/
+cairo
+-
+version
+.
+h
+for
+in
+-
+place
+builds
 =
 =
 =
