--- a/browser/locales/en-US/searchplugins/google.xml
+++ b/browser/locales/en-US/searchplugins/google.xml
@@ -65,96 +65,50 @@ data
 :
 image
 /
-x
--
-icon
+png
 ;
 base64
-iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAIAAACQkWg2AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAaRJREFUeNpiVIg5JRURw0A0YAHio943kYV
+iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8
 %
-2B
+2F9hAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAt5JREFUeNpsU1tIVFEU3fc1jnd8MONjRvOVaKJoGGiCEYJgoBBB0EOILIrCPoJ
 %
-2Ff33
+2Bish
 %
-2BdvvX7
+2Bwo8
 %
-2F
+2BiigiIqKGLCiSQsLoR8QwsVTUtGFwHEcdnTvjPK7Oe
 %
-2FMjEx8nKycrGzwKXOiPKzICvdeezLhCV3jp15
+2B7jnO4MKFp3c86Bs9l7nb3W3ofAGMO2YSSBLEYh5SNJZVGAMKP4SaAoSrkjIAgCgEhGpw6gYZf1PjSDPVIFbBoDckhqFhJiR4GpvJSUsWhfdiV4fj4R3Zh90GfuWSstLfgfYIULgZOtBVM6c8c29fncwuyX3mxDETLVnL7rWR53rfx50wViYiMev72TswdAQ5GQReBaecPSO
 %
-2Bfv
+2FfzcTfFsO9iER04HWPZBlPNdY0jnYaYWwAI7uSQuwGQiAB5
 %
-2FX0YGhv8MDDxMX2qKTIw0RK10eYD6QYqATvoPBkt3f5K0W9Ew4fjTFz
+2BYZQIAoJMczrciqgqb0HTFlZ
 %
-2F
+2FYYMDcgSPiqLAYU9pQ4gJCSYnpxwuEMs5Jka25N6GcsKobiiRQpyFpCDTisB2yKqUCAAQcA1M0oJ1v7CkrYuSeAWkLg5JqPwvSXrwHsA7yeM2GS
 %
-2Bw8Dm3W8UPeZxqFa
+2F1CsgCAyllYdkv2v4
 %
-2BevsFyD0twgfVsOfkRxHrtfV9u5BVQ8Crd98
+2FO
 %
-2FffkGYQM1QJ20
+2BpR90kjY6kiXh47udLHA9aOvPLzkS0mftS7VatgNJpobi1Daqb6mPzI33Ped
 %
-2FfSPv79eNxQGYfpSVJADmcvEAHbr7oOX2dj
+2FaV5sjYNfnHK6UE7GWbGPzCJLWASFZvYIUOUUfQ27R2fK6Cx9zi1qf2C0D07SGLSg70DkU4H51xCMeIEhKvQJlAkkdyC
 %
-2FERNKIA2
+2BU1zstEx9uxSKeb4Icd
 %
-2F
-%
-2F
-%
-2Fz
-%
-2FxfCDhYVoDUDw5P6vf9
-%
-2B5iY0HVmZGQWm
-%
-2BN3fff
-%
-2Fn2k4eLHS739x
-%
-2FDiRs
-%
-2Ff
+2FtYY0tVw02zRr
 %
 2F
 %
-2F5x8HO
+2FWXx9sJYgmLAKAAa9obGO93CXJkdf3acg8rTs4GWADBOgTdsgtz56Iy2zpE8RKjmCNhUAAuKSEewrfsjNqy4ExgDltVeVCBkYLQ28cyLPNvt2EYkKh1193EOBWxiaW51zvi6vOHExJAhGr391QMfmhdMEX
 %
-2FOHzN3djfqgNjIwMgc6qzLx
+2F2W33oswP24RpJSMNludQ2EceRfGrkSDY1
 %
-2Fpy47j2zY
+2Fzzc2HI8F1075ha1gJLg4zXtnTkoJn41i6F1T8A8Amy6BXh9S
 %
-2Feff06tXhOUucgxeun33AUZGpHh4
+2FrTdHHbzZoLSkoBFhLEEWawAWCsDTdPKZnZy
 %
-2Bvo7t8EyIJqz
-%
-2FhpasD59
-%
-2B5dNrqdnznZIsEL9ICXCsWuBCwvTv
-%
-2FymS5PWPP32ExEALz
-%
-2F
-%
-2BB5r848cPCJcRaMP9xaYQzofPPzfuvrnj0Jst
-%
-2B5
-%
-2F8
-%
-2Bc4sLPeDkYlRgJc93VPE18NIXkYUmJYQSQMZ
-%
-2FP3379uPH7
-%
-2F
-%
-2F
-%
-2FEETBzqJ0WqLGvFpe2LCC4AAAwAyjg7ENzDDWAAAAABJRU5ErkJggg
-%
-3D
-%
-3D
+2FgowAP1SVhbvUfi1AAAAAElFTkSuQmCC
 <
 /
 Image
