b=455513; add optional flag to allow converting a DDB to a DIB internally, if the surface is every used as a source; r=jmuizelaar
If a DDB is used as a source for an operation that can't be handled
natively by GDI, we end up needing to take a really slow path (creating a
temporary surface for acquire_source) for each operation.  If we convert
the DDB to a DIB, we then end up having a real image buffer and can hand
things off to pixman directly.

This isn't the default mode because I'm not sure if there are cases where a
DDB is explicitly needed (e.g. for printing), and it would change
current cairo behaviour.  It might become the default at some point in the
future.

UltraBlame original commit: 5975189375dac77d390bb0f45ab347b924b349d9

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -241,6 +241,24 @@ in
 -
 place
 builds
+win32
+-
+ddb
+-
+dib
+.
+patch
+:
+fix
+for
+bug
+455513
+;
+not
+upstream
+yet
+pending
+feebdack
 =
 =
 =
