Fix for bug 445704 (JSON bookmarks backup has localized filename (and can't be easily restored). r=zeniko, a=beltzner.
UltraBlame original commit: 8c92737298f60de7a5e5125b790364d3f598f1c1

--- a/toolkit/locales/en-US/chrome/places/places.properties
+++ b/toolkit/locales/en-US/chrome/places/places.properties
@@ -66,70 +66,41 @@ bookmarksArchiveFilename
 )
 :
 #
-%
-S
-will
-be
-replaced
-by
-the
-current
-date
-in
-ISO
-8601
-format
-YYYY
--
-MM
--
-DD
-.
-#
-The
-resulting
+Do
+not
+change
+this
 string
+!
+It
+'
+s
+used
+only
+to
+#
+detect
+older
+localized
+bookmark
+archives
+from
+#
+before
+bug
+445704
+was
+fixed
+.
+It
 will
 be
-suggested
-as
+removed
+#
+in
 a
-filename
-so
-make
-sure
-that
-you
-'
-re
-#
-only
-using
-characters
-legal
-for
-file
-names
-.
-Consider
-falling
-back
-to
-the
-#
-en
--
-US
-value
-if
-you
-have
-to
-use
-non
--
-ascii
-characters
+subsequent
+release
 .
 bookmarksArchiveFilename
 =
