Bug 414715.  Notify the user if places.sqlite is locked.  r=pike, r=mak77, ui-review=faaborg, a=blocking-firefox3.1
UltraBlame original commit: 2e30d8025fa4f74d1100744707a3a4f1ee28ae44

--- a/browser/locales/en-US/chrome/browser/places/places.properties
+++ b/browser/locales/en-US/chrome/browser/places/places.properties
@@ -770,3 +770,45 @@ xml
 bookmarkResultLabel
 =
 Bookmark
+lockPromptTitle
+=
+Browser
+Startup
+Error
+lockPromptText
+=
+The
+bookmarks
+and
+history
+system
+will
+not
+be
+functional
+because
+one
+of
+Firefox
+'
+s
+files
+is
+in
+use
+by
+another
+application
+.
+Some
+security
+software
+can
+cause
+this
+problem
+.
+lockPromptInfoButtonText
+=
+Learn
+More
