Bug 463810 - Add ellipsis to "Clear Recent History" button in about:privatebrowsing; r,a191=beltzner
UltraBlame original commit: 9bf88e2ecc45293646f6f3972e770193c1e2165b

--- a/browser/locales/en-US/chrome/browser/aboutPrivateBrowsing.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutPrivateBrowsing.dtd
@@ -121,7 +121,7 @@ history
 ENTITY
 privatebrowsingpage
 .
-recentHistory
+clearRecentHistory
 .
 label
 "
@@ -135,7 +135,7 @@ History
 ENTITY
 privatebrowsingpage
 .
-recentHistory
+clearRecentHistory
 .
 accesskey
 "
