Bug 277296 -  The print dialogs have no accesskeys; r=gavin, a191=beltzner
UltraBlame original commit: 1551ebc4dbaa3a01459ec7ba6e2b42e7472430c4

--- a/toolkit/locales/en-US/chrome/global/printPageSetup.dtd
+++ b/toolkit/locales/en-US/chrome/global/printPageSetup.dtd
@@ -60,6 +60,8 @@ Orientation
 !
 ENTITY
 portrait
+.
+label
 "
 Portrait
 "
@@ -67,9 +69,31 @@ Portrait
 <
 !
 ENTITY
+portrait
+.
+accesskey
+"
+P
+"
+>
+<
+!
+ENTITY
 landscape
+.
+label
 "
 Landscape
+"
+>
+<
+!
+ENTITY
+landscape
+.
+accesskey
+"
+L
 "
 >
 <
@@ -81,6 +105,16 @@ label
 "
 Scale
 :
+"
+>
+<
+!
+ENTITY
+scale
+.
+accesskey
+"
+S
 "
 >
 <
@@ -102,10 +136,20 @@ shrinkToFit
 label
 "
 Shrink
-To
-Fit
+to
+fit
 Page
 Width
+"
+>
+<
+!
+ENTITY
+shrinkToFit
+.
+accesskey
+"
+W
 "
 >
 <
@@ -134,6 +178,16 @@ amp
 ;
 images
 )
+"
+>
+<
+!
+ENTITY
+printBG
+.
+accesskey
+"
+B
 "
 >
 <
@@ -200,12 +254,32 @@ Top
 <
 !
 ENTITY
+marginTop
+.
+accesskey
+"
+T
+"
+>
+<
+!
+ENTITY
 marginBottom
 .
 label
 "
 Bottom
 :
+"
+>
+<
+!
+ENTITY
+marginBottom
+.
+accesskey
+"
+B
 "
 >
 <
@@ -222,12 +296,32 @@ Left
 <
 !
 ENTITY
+marginLeft
+.
+accesskey
+"
+L
+"
+>
+<
+!
+ENTITY
 marginRight
 .
 label
 "
 Right
 :
+"
+>
+<
+!
+ENTITY
+marginRight
+.
+accesskey
+"
+R
 "
 >
 <
