--- a/toolkit/locales/en-US/chrome/global/printdialog.dtd
+++ b/toolkit/locales/en-US/chrome/global/printdialog.dtd
@@ -56,11 +56,31 @@ File
 <
 !
 ENTITY
+fileCheck
+.
+accesskey
+"
+F
+"
+>
+<
+!
+ENTITY
 propertiesButton
 .
 label
 "
 Properties
+"
+>
+<
+!
+ENTITY
+propertiesButton
+.
+accesskey
+"
+o
 "
 >
 <
@@ -100,6 +120,16 @@ Name
 <
 !
 ENTITY
+printerInput
+.
+accesskey
+"
+N
+"
+>
+<
+!
+ENTITY
 printrangeGroup
 .
 label
@@ -122,11 +152,31 @@ Pages
 <
 !
 ENTITY
+allpagesRadio
+.
+accesskey
+"
+A
+"
+>
+<
+!
+ENTITY
 rangeRadio
 .
 label
 "
 Pages
+"
+>
+<
+!
+ENTITY
+rangeRadio
+.
+accesskey
+"
+P
 "
 >
 <
@@ -142,6 +192,16 @@ from
 <
 !
 ENTITY
+frompageInput
+.
+accesskey
+"
+r
+"
+>
+<
+!
+ENTITY
 topageInput
 .
 label
@@ -152,11 +212,31 @@ to
 <
 !
 ENTITY
+topageInput
+.
+accesskey
+"
+t
+"
+>
+<
+!
+ENTITY
 selectionRadio
 .
 label
 "
 Selection
+"
+>
+<
+!
+ENTITY
+selectionRadio
+.
+accesskey
+"
+S
 "
 >
 <
@@ -180,6 +260,16 @@ Number
 of
 copies
 :
+"
+>
+<
+!
+ENTITY
+numCopies
+.
+accesskey
+"
+c
 "
 >
 <
@@ -211,6 +301,16 @@ screen
 <
 !
 ENTITY
+aslaidoutRadio
+.
+accesskey
+"
+u
+"
+>
+<
+!
+ENTITY
 selectedframeRadio
 .
 label
@@ -223,6 +323,16 @@ frame
 <
 !
 ENTITY
+selectedframeRadio
+.
+accesskey
+"
+m
+"
+>
+<
+!
+ENTITY
 eachframesepRadio
 .
 label
@@ -230,5 +340,15 @@ label
 Each
 frame
 separately
+"
+>
+<
+!
+ENTITY
+eachframesepRadio
+.
+accesskey
+"
+E
 "
 >
