--- a/toolkit/locales/en-US/chrome/global/printjoboptions.dtd
+++ b/toolkit/locales/en-US/chrome/global/printjoboptions.dtd
@@ -36,6 +36,16 @@ Size
 <
 !
 ENTITY
+paperInput
+.
+accesskey
+"
+P
+"
+>
+<
+!
+ENTITY
 plexInput
 .
 label
@@ -43,6 +53,16 @@ label
 Plex
 mode
 :
+"
+>
+<
+!
+ENTITY
+plexInput
+.
+accesskey
+"
+m
 "
 >
 <
@@ -61,6 +81,16 @@ Quality
 <
 !
 ENTITY
+resolutionInput
+.
+accesskey
+"
+e
+"
+>
+<
+!
+ENTITY
 cmdInput
 .
 label
@@ -73,6 +103,16 @@ Command
 <
 !
 ENTITY
+cmdInput
+.
+accesskey
+"
+o
+"
+>
+<
+!
+ENTITY
 jobTitleInput
 .
 label
@@ -80,6 +120,16 @@ label
 Job
 Title
 :
+"
+>
+<
+!
+ENTITY
+jobTitleInput
+.
+accesskey
+"
+J
 "
 >
 <
@@ -100,7 +150,17 @@ grayRadio
 .
 label
 "
-GrayScale
+Grayscale
+"
+>
+<
+!
+ENTITY
+grayRadio
+.
+accesskey
+"
+G
 "
 >
 <
@@ -116,12 +176,32 @@ Color
 <
 !
 ENTITY
+colorRadio
+.
+accesskey
+"
+C
+"
+>
+<
+!
+ENTITY
 colorspaceInput
 .
 label
 "
 Colorspace
 :
+"
+>
+<
+!
+ENTITY
+colorspaceInput
+.
+accesskey
+"
+s
 "
 >
 <
@@ -146,7 +226,16 @@ Download
 fonts
 to
 printer
-?
+"
+>
+<
+!
+ENTITY
+downloadFonts
+.
+accesskey
+"
+D
 "
 >
 <
@@ -179,12 +268,32 @@ Top
 <
 !
 ENTITY
+topInput
+.
+accesskey
+"
+T
+"
+>
+<
+!
+ENTITY
 bottomInput
 .
 label
 "
 Bottom
 :
+"
+>
+<
+!
+ENTITY
+bottomInput
+.
+accesskey
+"
+B
 "
 >
 <
@@ -201,11 +310,31 @@ Left
 <
 !
 ENTITY
+leftInput
+.
+accesskey
+"
+L
+"
+>
+<
+!
+ENTITY
 rightInput
 .
 label
 "
 Right
 :
+"
+>
+<
+!
+ENTITY
+rightInput
+.
+accesskey
+"
+R
 "
 >
