Bug 461860 -  windows mobile fixes in gfx r+sr=vlad
UltraBlame original commit: 3ba7d5a29839fb5cc73c2a63c3bc3306a3fdc466

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -271,6 +271,37 @@ to
 cairo
 .
 h
+wince
+-
+fixes
+.
+patch
+:
+stubs
+out
+win32
+functions
+we
+use
+but
+are
+not
+supported
+on
+win32
+.
+Also
+implements
+ExtSelectClipRgn
+in
+terms
+of
+other
+functions
+available
+on
+wince
+.
 =
 =
 =
