Bug 335531 - Correct misuse of "UTF-16BE", "UTF-16LE", "UTF-32BE", and "UTF-32LE" charset labels; r=smontagu sr=dbaron
UltraBlame original commit: 78d662c2c8785e04d47f04a584c654830ba20993

--- a/dom/locales/en-US/chrome/charsetTitles.properties
+++ b/dom/locales/en-US/chrome/charsetTitles.properties
@@ -952,9 +952,7 @@ Unicode
 (
 UTF
 -
-16
-Little
-Endian
+16LE
 )
 utf
 -
@@ -966,9 +964,19 @@ Unicode
 (
 UTF
 -
-16
-Big
-Endian
+16BE
+)
+utf
+-
+32
+.
+title
+=
+Unicode
+(
+UTF
+-
+32
 )
 utf
 -
@@ -980,9 +988,7 @@ Unicode
 (
 UTF
 -
-32
-Little
-Endian
+32LE
 )
 utf
 -
@@ -994,9 +1000,7 @@ Unicode
 (
 UTF
 -
-32
-Big
-Endian
+32BE
 )
 iso
 -
