Backed out changeset 78d662c2c878 (Bug 335531) on suspicion of causing mochitest failures in test_bug399284.html on linux & windows unittest boxes.
UltraBlame original commit: 024fa1c26e347b5281a1cb57854f6eff6687dc90

--- a/dom/locales/en-US/chrome/charsetTitles.properties
+++ b/dom/locales/en-US/chrome/charsetTitles.properties
@@ -952,7 +952,9 @@ Unicode
 (
 UTF
 -
-16LE
+16
+Little
+Endian
 )
 utf
 -
@@ -964,19 +966,9 @@ Unicode
 (
 UTF
 -
-16BE
-)
-utf
--
-32
-.
-title
-=
-Unicode
-(
-UTF
--
-32
+16
+Big
+Endian
 )
 utf
 -
@@ -988,7 +980,9 @@ Unicode
 (
 UTF
 -
-32LE
+32
+Little
+Endian
 )
 utf
 -
@@ -1000,7 +994,9 @@ Unicode
 (
 UTF
 -
-32BE
+32
+Big
+Endian
 )
 iso
 -
