b=467874 only destroy FT_Faces created by cairo. r=vlad
UltraBlame original commit: e8d254e4732219ad92d92d4c76f44e7165f474ee

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -302,6 +302,23 @@ available
 on
 wince
 .
+ft
+-
+done
+-
+face
+.
+patch
+:
+bug
+467874
+;
+only
+destroy
+FT_Faces
+created
+by
+cairo
 =
 =
 =
