--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -884,3 +884,26 @@ low
 memory
 condition
 .
+WrongEventPropertyAccessWarning
+=
+The
+'
+%
+S
+'
+property
+of
+a
+%
+S
+event
+should
+not
+be
+used
+.
+The
+value
+is
+meaningless
+.
