Bug 463253 - Application name displayed in title bar; r=mconnor
UltraBlame original commit: 16d246e866502710169b85965d6a691b51bfec82

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -121,9 +121,9 @@ titlemodifiermenuseparator
 LOCALIZATION
 NOTE
 (
-mainWindowPrivateBrowsing
+mainWindow
 .
-titlemodifier
+titlePrivateBrowsingSuffix
 )
 :
 This
@@ -147,19 +147,49 @@ mode
 <
 !
 ENTITY
+mainWindow
+.
+titlePrivateBrowsingSuffix
+"
+(
+Private
+Browsing
+)
+"
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
 mainWindowPrivateBrowsing
 .
 titlemodifier
+)
+:
+DONT_TRANSLATE
+-
+-
+>
+<
+!
+ENTITY
+mainWindow
+.
+titlemodifierPrivateBrowsing
 "
 &
 mainWindow
 .
 titlemodifier
 ;
-(
-Private
-Browsing
-)
+&
+mainWindow
+.
+titlePrivateBrowsingSuffix
+;
 "
 >
 <
