--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -965,6 +965,54 @@ Edit
 This
 Bookmark
 #
+LOCALIZATION
+NOTE
+(
+editBookmark
+.
+removeBookmarks
+.
+label
+)
+#
+Semi
+-
+colon
+list
+of
+plural
+forms
+.
+Replacement
+for
+#
+1
+is
+#
+the
+number
+of
+bookmarks
+to
+be
+removed
+.
+editBookmark
+.
+removeBookmarks
+.
+label
+=
+Remove
+Bookmark
+;
+Remove
+Bookmarks
+(
+#
+1
+)
+#
 Geolocation
 UI
 #
