Bug 460343 - Add privacy-section prefs to control awesomebar behaviour. r=gavin, ui=faaborg, a191=beltzner
UltraBlame original commit: eb18fff240df5a5197a28eb67e2b07f8ac6b1f17

--- a/browser/locales/en-US/chrome/browser/preferences/privacy.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/privacy.dtd
@@ -10,6 +10,97 @@ History
 >
 <
 !
+ENTITY
+locbar
+.
+pre
+.
+label
+"
+When
+using
+the
+location
+bar
+suggest
+:
+"
+>
+<
+!
+ENTITY
+locbar
+.
+pre
+.
+accessKey
+"
+l
+"
+>
+<
+!
+ENTITY
+locbar
+.
+post
+.
+label
+"
+"
+>
+<
+!
+ENTITY
+locbar
+.
+both
+.
+label
+"
+History
+and
+Bookmarks
+"
+>
+<
+!
+ENTITY
+locbar
+.
+history
+.
+label
+"
+History
+"
+>
+<
+!
+ENTITY
+locbar
+.
+bookmarks
+.
+label
+"
+Bookmarks
+"
+>
+<
+!
+ENTITY
+locbar
+.
+nothing
+.
+label
+"
+Nothing
+"
+>
+<
+!
 -
 -
 LOCALIZATION
