--- a/dom/locales/en-US/chrome/layout/MediaDocument.properties
+++ b/dom/locales/en-US/chrome/layout/MediaDocument.properties
@@ -497,6 +497,85 @@ type
 LOCALIZATION
 NOTE
 (
+VideoFileNameWithTypeAndDimensions
+)
+:
+first
+%
+S
+is
+filename
+seond
+%
+S
+is
+type
+third
+%
+S
+is
+width
+fourth
+%
+S
+is
+height
+.
+#
+LOCALIZATION
+NOTE
+(
+VideoFileNameWithType
+)
+:
+first
+%
+S
+is
+filename
+second
+%
+S
+is
+type
+#
+LOCALIZATION
+NOTE
+(
+VideoFileNameWithDimensions
+)
+:
+first
+%
+S
+is
+filename
+seond
+S
+is
+width
+third
+%
+S
+is
+height
+#
+LOCALIZATION
+NOTE
+(
+VideoFileNameWithNeitherDimensionsNorFile
+)
+:
+first
+%
+S
+is
+filename
+.
+#
+LOCALIZATION
+NOTE
+(
 MediaTitleWithFile
 )
 :
@@ -564,6 +643,42 @@ ImageTitleWithNeitherDimensionsNorFile
 S
 Image
 )
+VideoFileNameWithTypeAndDimensions
+=
+%
+S
+(
+%
+S
+%
+Sx
+%
+S
+pixels
+)
+VideoFileNameWithType
+=
+%
+S
+(
+%
+S
+)
+VideoFileNameWithDimensions
+=
+%
+S
+(
+%
+Sx
+%
+S
+pixels
+)
+VideoFileNameWithNeitherDimensionsNorFile
+=
+%
+S
 MediaTitleWithFile
 =
 %
