--- a/browser/locales/en-US/chrome/browser/places/places.properties
+++ b/browser/locales/en-US/chrome/browser/places/places.properties
@@ -770,3 +770,76 @@ xml
 bookmarkResultLabel
 =
 Bookmark
+#
+LOCALIZATION
+NOTE
+(
+lockPrompt
+.
+text
+)
+#
+%
+S
+will
+be
+replaced
+with
+the
+application
+name
+.
+lockPrompt
+.
+title
+=
+Browser
+Startup
+Error
+lockPrompt
+.
+text
+=
+The
+bookmarks
+and
+history
+system
+will
+not
+be
+functional
+because
+one
+of
+%
+S
+'
+s
+files
+is
+in
+use
+by
+another
+application
+.
+Some
+security
+software
+can
+cause
+this
+problem
+.
+lockPromptInfoButton
+.
+label
+=
+Learn
+More
+lockPromptInfoButton
+.
+accessKey
+=
+L
