Bug 465692 - Update the text of the Private Browsing prompt; r,ui-r=beltzner ui-r=faaborg
UltraBlame original commit: cdeb81e07974609a49ed46351a45fafb5537dad6

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -1255,6 +1255,16 @@ privateBrowsingDialogTitle
 Start
 Private
 Browsing
+privateBrowsingMessageHeader
+=
+Would
+you
+like
+to
+start
+Private
+Browsing
+?
 privateBrowsingMessage
 =
 %
