Bug 471627 - Update text of about:private browsing before string freeze; r=gavin ui-r=beltzner
UltraBlame original commit: 9c13f028da54d5280d65af5b1ec4b60fd21e2675

--- a/browser/locales/en-US/chrome/browser/aboutPrivateBrowsing.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutPrivateBrowsing.dtd
@@ -47,24 +47,19 @@ session
 ENTITY
 privatebrowsingpage
 .
-longDesc
+description
 "
-No
-history
-will
-be
-recorded
-by
+When
+private
+browsing
 &
 brandShortName
 ;
-during
-this
-browsing
-session
-.
-This
-includes
+won
+'
+t
+keep
+any
 browser
 history
 search
@@ -75,32 +70,73 @@ web
 form
 history
 cookies
-and
+or
 temporary
 internet
 files
 .
 However
-any
 files
 you
 download
-or
+and
 bookmarks
 you
-create
+make
 will
 be
-preserved
+kept
 .
 "
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
+privatebrowsingpage
+.
+clearRecentHistoryBefore
+)
+:
+include
+a
+trailing
+space
+as
+needed
+-
+-
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
+privatebrowsingpage
+.
+clearRecentHistoryAfter
+)
+:
+include
+a
+starting
+space
+as
+needed
+-
+-
 >
 <
 !
 ENTITY
 privatebrowsingpage
 .
-clearRecentHistoryDesc
+clearRecentHistoryBefore
 "
 You
 may
@@ -109,10 +145,28 @@ to
 start
 by
 also
+"
+>
+<
+!
+ENTITY
+privatebrowsingpage
+.
+clearRecentHistoryInner
+"
 clearing
 your
 recent
 history
+"
+>
+<
+!
+ENTITY
+privatebrowsingpage
+.
+clearRecentHistoryAfter
+"
 .
 "
 >
@@ -121,45 +175,33 @@ history
 ENTITY
 privatebrowsingpage
 .
-clearRecentHistory
-.
-label
-"
-Clear
-Recent
-History
-"
->
-<
-!
-ENTITY
-privatebrowsingpage
-.
-clearRecentHistory
-.
-accesskey
-"
-C
-"
->
-<
-!
-ENTITY
-privatebrowsingpage
-.
-howToStopDesc
+howToStop
 "
 To
 stop
 private
 browsing
-uncheck
-Tools
+select
+&
+toolsMenu
+.
+label
+;
 &
 gt
 ;
-Private
-Browsing
+&
+privateBrowsingCmd
+.
+stop
+.
+label
+;
+or
+close
+&
+brandShortName
+;
 .
 "
 >
@@ -168,9 +210,45 @@ Browsing
 ENTITY
 privatebrowsingpage
 .
-footerDesc
+moreInfo
 "
-Enjoy
+While
+this
+computer
+won
+'
+t
+have
+a
+record
+of
+your
+browsing
+history
+your
+internet
+service
+provider
+or
+employer
+can
+still
+track
+the
+pages
+you
+visit
+.
+"
+>
+<
 !
+ENTITY
+privatebrowsingpage
+.
+learnMore
+"
+Learn
+More
 "
 >
