--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1654,11 +1654,40 @@ H
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+:
+These
+two
+strings
+can
+share
+an
+access
+key
+beause
+they
+never
+appear
+together
+on
+the
+menu
+-
+-
+>
+<
+!
 ENTITY
 privateBrowsingCmd
 .
+start
+.
 label
 "
+Start
 Private
 Browsing
 "
@@ -1667,6 +1696,34 @@ Browsing
 !
 ENTITY
 privateBrowsingCmd
+.
+start
+.
+accesskey
+"
+B
+"
+>
+<
+!
+ENTITY
+privateBrowsingCmd
+.
+stop
+.
+label
+"
+Stop
+Private
+Browsing
+"
+>
+<
+!
+ENTITY
+privateBrowsingCmd
+.
+stop
 .
 accesskey
 "
