Bug 415128: fix Help->About copyright notice to mention licensing information, and remove references to logo copyright in non-branded builds, r=gavin, a=beltzner
UltraBlame original commit: 87590083255c8c157059bcc9d504cec6a3ff4459

--- a/browser/locales/en-US/chrome/browser/aboutDialog.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutDialog.dtd
@@ -94,7 +94,7 @@ C
 <
 !
 ENTITY
-copyrightInfo
+copyrightInfo1
 "
 &
 #
@@ -106,24 +106,37 @@ copyrightInfo
 Contributors
 .
 All
-Rights
-Reserved
-.
-Firefox
-and
-the
-Firefox
-logos
-are
-trademarks
-of
-the
-Mozilla
-Foundation
-.
-All
 rights
 reserved
+.
+(
+"
+>
+<
+!
+ENTITY
+licenseLink
+"
+about
+:
+license
+"
+>
+<
+!
+ENTITY
+licenseLinkText
+"
+Licensing
+information
+"
+>
+<
+!
+ENTITY
+copyrightInfo2
+"
+)
 .
 "
 >
