--- a/other-licenses/branding/firefox/locales/en-US/brand.dtd
+++ b/other-licenses/branding/firefox/locales/en-US/brand.dtd
@@ -23,3 +23,26 @@ vendorShortName
 Mozilla
 "
 >
+<
+!
+ENTITY
+logoCopyright
+"
+Firefox
+and
+the
+Firefox
+logos
+are
+trademarks
+of
+the
+Mozilla
+Foundation
+.
+All
+rights
+reserved
+.
+"
+>
