Bug 463400 - Make about:privatebrowsing useful outside the private browsing mode; r=gavin ui-r=beltzner
UltraBlame original commit: f035bd74e1ca813592c982cd8892dbd05eaa9322

--- a/browser/locales/en-US/chrome/browser/aboutPrivateBrowsing.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutPrivateBrowsing.dtd
@@ -3,7 +3,7 @@
 ENTITY
 privatebrowsingpage
 .
-tabtitle
+title
 "
 Private
 Browsing
@@ -14,10 +14,18 @@ Browsing
 ENTITY
 privatebrowsingpage
 .
-pagetitle
+title
+.
+normal
 "
+Would
+you
+like
+to
+start
 Private
 Browsing
+?
 "
 >
 <
@@ -47,11 +55,35 @@ session
 ENTITY
 privatebrowsingpage
 .
+issueDesc
+.
+normal
+"
+&
+brandShortName
+;
+is
+not
+currently
+in
+Private
+Browsing
+mode
+.
+"
+>
+<
+!
+ENTITY
+privatebrowsingpage
+.
 description
 "
-When
-private
-browsing
+In
+a
+Private
+Browsing
+session
 &
 brandShortName
 ;
@@ -175,12 +207,38 @@ clearRecentHistoryAfter
 ENTITY
 privatebrowsingpage
 .
+startPrivateBrowsing
+.
+label
+"
+Start
+Private
+Browsing
+"
+>
+<
+!
+ENTITY
+privatebrowsingpage
+.
+startPrivateBrowsing
+.
+accesskey
+"
+P
+"
+>
+<
+!
+ENTITY
+privatebrowsingpage
+.
 howToStop
 "
 To
 stop
-private
-browsing
+Private
+Browsing
 select
 &
 toolsMenu
@@ -201,6 +259,39 @@ or
 close
 &
 brandShortName
+;
+.
+"
+>
+<
+!
+ENTITY
+privatebrowsingpage
+.
+howToStart
+"
+To
+start
+Private
+Browsing
+you
+can
+also
+select
+&
+toolsMenu
+.
+label
+;
+&
+gt
+;
+&
+privateBrowsingCmd
+.
+start
+.
+label
 ;
 .
 "
