Bug 471367 - Change the property name WARN_UNSUPPORTED_MSG to WARN_MIN_SUPPORTED_OS_MSG. r=jmathies
UltraBlame original commit: d7e69dfa7b7f38d4c41c0fa58be269219af5b025

--- a/browser/locales/en-US/installer/custom.properties
+++ b/browser/locales/en-US/installer/custom.properties
@@ -834,7 +834,7 @@ a
 different
 location
 .
-WARN_UNSUPPORTED_MSG
+WARN_MIN_SUPPORTED_OS_MSG
 =
 Sorry
 BrandShortName
@@ -850,7 +850,7 @@ of
 BrandShortName
 requires
 {
-MinUnsupportedVer
+MinSupportedVer
 }
 or
 newer
