Expose site-specific settings in CRH dialog. b=380852, r=gavin
UltraBlame original commit: 7b60ede5399de2ad138990b5f1eae6fe06d90dfc

--- a/browser/locales/en-US/chrome/browser/sanitize.dtd
+++ b/browser/locales/en-US/chrome/browser/sanitize.dtd
@@ -389,6 +389,29 @@ L
 <
 !
 ENTITY
+itemSiteSettings
+.
+label
+"
+Site
+-
+specific
+Settings
+"
+>
+<
+!
+ENTITY
+itemSiteSettings
+.
+accesskey
+"
+S
+"
+>
+<
+!
+ENTITY
 window
 .
 width
