Bug 462082 - Update libtheora to latest stable version - rs=roc
UltraBlame original commit: 53a4746eb1bac470f323da7d1c0bf41ee6ccb33e

--- a/media/libtheora/AUTHORS
+++ b/media/libtheora/AUTHORS
@@ -60,6 +60,9 @@ and
 example
 ports
 -
+dump_video
+example
+-
 VP3
 -
 >
@@ -72,6 +75,19 @@ Figures
 for
 the
 spec
+Vegard
+Nossum
+-
+Original
+png2theora
+implementation
+Rudolf
+Marek
+Nils
+Pipenbrinck
+-
+MMX
+optimizations
 Michael
 Smith
 Andre
