--- a/media/libtheora/README
+++ b/media/libtheora/README
@@ -81,7 +81,7 @@ s
 libtheora
 1
 .
-0beta1
+0
 release
 -
 -
@@ -219,9 +219,8 @@ the
 decoder
 to
 improve
-over
+on
 what
-is
 is
 possible
 with
@@ -295,51 +294,6 @@ svn
 /
 for
 instructions
-.
-*
-*
-*
-What
-is
-the
-goal
-of
-this
-release
-?
-This
-is
-the
-first
-beta
-release
-of
-the
-1
-.
-0
-reference
-implementation
-.
-It
-is
-intended
-to
-completely
-support
-the
-decoder
-specification
-and
-gather
-feedback
-on
-the
-implementation
-before
-declaring
-it
-stable
 .
 -
 -
@@ -535,6 +489,36 @@ or
 newer
 .
 For
+creating
+a
+source
+distribution
+package
+:
+as
+above
+Doxygen
+to
+build
+the
+API
+documentation
+pdflatex
+and
+fig2dev
+to
+build
+the
+format
+specification
+(
+transfig
+package
+in
+Ubuntu
+)
+.
+For
 the
 player
 only
@@ -557,6 +541,7 @@ driver
 and
 development
 headers
+.
 The
 provided
 build
@@ -608,8 +593,7 @@ xiph
 .
 org
 .
-Some
-windows
+Windows
 build
 support
 is
@@ -617,6 +601,18 @@ included
 in
 the
 win32
+directory
+.
+Project
+files
+for
+Apple
+XCode
+is
+included
+in
+the
+macosx
 directory
 .
 There
