Warn when nsIDOMCSSStyleDeclaration::GetPropertyCSSValue is called.  (Bug 474655)  r+sr=bzbarsky
UltraBlame original commit: eec3076f3bab68a031a39a4b01617a3e4c97834b

--- a/dom/locales/en-US/chrome/layout/css.properties
+++ b/dom/locales/en-US/chrome/layout/css.properties
@@ -450,6 +450,26 @@ text
 css
 "
 .
+UseOfGetPropertyCSSValueWarning
+=
+Use
+of
+getPropertyCSSValue
+(
+)
+is
+deprecated
+.
+To
+upgrade
+your
+code
+use
+getPropertyValue
+(
+)
+instead
+.
 PEUnexpEOF2
 =
 Unexpected
